# api.sveltechi.dev

./: README.md  app.py  pyproject.toml  tests.sh
blueprints/: signup.py
eventreg/: __init__.py  event.py
tests/unit/: test_eventreg.py
